objects/CLV_ChecklistVisita_ARG__c.object
<CustomObject>
    <fields>
        <fullName>ResonNotSale_AR__c</fullName>
        <label>Reson Not Sale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - Price out of policy</fullName>
                </value>
                <value>
                    <fullName>02 - Overinventory</fullName>
                </value>
                <value>
                    <fullName>03 - Closed business</fullName>
                </value>
                <value>
                    <fullName>04 - Customer closed agreement with competitor</fullName>
                </value>
                <value>
                    <fullName>05 - Other (pls detail)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalePerformed_AR__c</fullName>
        <label>Sale Performed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesmenMeetingDate_AR__c</fullName>
        <label>Salesmen Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesmenMeetingLocation_AR__c</fullName>
        <label>Salesmen Meeting Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesmenMeetingObjective_AR__c</fullName>
        <label>Salesmen Meeting Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sell-In</fullName>
                </value>
                <value>
                    <fullName>Sell-Out</fullName>
                </value>
                <value>
                    <fullName>Inventory count</fullName>
                </value>
                <value>
                    <fullName>Promotional activity</fullName>
                </value>
                <value>
                    <fullName>Trainning</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesmenMeetingOtherObjectives_AR__c</fullName>
        <label>Salesmen Meeting Other Objectives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesmenMeetingParticipants_AR__c</fullName>
        <label>Salesmen Meeting Participants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesmenMeetingSuccessfull_AR__c</fullName>
        <inlineHelpText>Resultado alcanzado con relación al objetivo definido en la reunion anterior?</inlineHelpText>
        <label>Salesmen Meeting Successfull</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SamplingProduct01_AR__c</fullName>
        <label>Sampling Product 01</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SamplingProduct02_AR__c</fullName>
        <label>Sampling Product 02</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SamplingProduct03_AR__c</fullName>
        <label>Sampling Product 03</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_AR__c</fullName>
        <label>Visit</label>
        <referenceTo>Visitas__c</referenceTo>
        <relationshipLabel>Checklist de Visitas ARG</relationshipLabel>
        <relationshipName>LAT_Checklist_de_Visitas_ARG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Checklist de Visita ARG</label>
    <listViews>
        <fullName>All_Mexico</fullName>
        <columns>NAME</columns>
        <columns>LAT_MX_ChecklistName__c</columns>
        <columns>LAT_MX_Subtype__c</columns>
        <columns>Visit_AR__c</columns>
        <columns>LAT_MX_Reason__c</columns>
        <columns>LAT_MX_StartTime__c</columns>
        <columns>LAT_MX_EndTime__c</columns>
        <columns>LAT_MX_Result__c</columns>
        <columns>LAT_MX_Feedback__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Mexico Todos</label>
        <language>es_MX</language>
        <sharedTo>
            <roleAndSubordinates>MX_Presidente</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Nombre de Checklist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist de Visitas ARG</pluralLabel>
    <recordTypes>
        <fullName>CLV_Border_URU</fullName>
        <active>true</active>
        <label>Border URU</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_ConvenienceStores_ARG</fullName>
        <active>true</active>
        <label>Convenience Stores ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_DirectOffTrade_URU</fullName>
        <active>true</active>
        <label>Direct Off Trade URU</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_DirectOntrade_ARG</fullName>
        <active>true</active>
        <label>Direct On Trade ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_DistributorsOff_ARG</fullName>
        <active>true</active>
        <label>Distributors Off ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_DistributorsOn_ARG</fullName>
        <active>true</active>
        <label>Distributors On ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_Distributors_URU</fullName>
        <active>true</active>
        <label>Distributors URU</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_IndirectOffTrade_URU</fullName>
        <active>true</active>
        <label>Indirect Off Trade URU</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_IndirectOnTrade_ARG</fullName>
        <active>true</active>
        <label>Indirect On Trade ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_OnTradeDirecto_URU</fullName>
        <active>true</active>
        <label>On Trade Directo URU</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_OnTradeIndirectos_URU</fullName>
        <active>true</active>
        <label>On Trade Indirectos URU</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_POSDirectOffTrade_URU</fullName>
        <active>true</active>
        <label>POS Direct Off Trade URU</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_POSSupermarkets_ARG</fullName>
        <active>true</active>
        <label>POS Supermarkets ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_POSWholesalers_ARG</fullName>
        <active>true</active>
        <label>POS Wholesalers ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_POSWineries_ARG</fullName>
        <active>true</active>
        <label>POS Wineries ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_Supermarkets_ARG</fullName>
        <active>true</active>
        <label>Supermarkets ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_Wholesalers_ARG</fullName>
        <active>true</active>
        <label>Wholesalers ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLV_Wineries_ARG</fullName>
        <active>true</active>
        <label>Wineries ARG</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CLV_ActivityNegotiationOff</fullName>
        <active>true</active>
        <label>MX Activity Negotiation - Off Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CLV_ActivityNegotiationOn</fullName>
        <active>true</active>
        <label>MX Activity Negotiation - On Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CLV_Collections</fullName>
        <active>true</active>
        <label>MX Collections</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CLV_FollowUpOff</fullName>
        <active>true</active>
        <label>MX Follow Up - Off Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CLV_FollowUpOn</fullName>
        <active>true</active>
        <label>MX Follow Up - On Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CLV_ProspectingOff</fullName>
        <active>true</active>
        <label>MX Prospecting - Off Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CLV_ProspectingOn</fullName>
        <active>true</active>
        <label>MX Prospecting - On Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CLV_RelationshipOff</fullName>
        <active>true</active>
        <label>MX Relationship - Off Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CLV_RelationshipOn</fullName>
        <active>true</active>
        <label>MX Relationship - On Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_CLV_SalesNegotiation</fullName>
        <active>true</active>
        <label>MX Sales Negotiation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_MX_CLV_VR01_StartEndTimeValidation</fullName>
        <active>true</active>
        <description>Validates that the Start Time selected is not greater than the End Time selected.</description>
        <errorConditionFormula>($RecordType.DeveloperName = &apos;LAT_MX_CLV_ActivityNegotiationOff&apos; || 
 $RecordType.DeveloperName = &apos;LAT_MX_CLV_ActivityNegotiationOn&apos; || 
 $RecordType.DeveloperName = &apos;LAT_MX_CLV_Collections&apos; || 
 $RecordType.DeveloperName = &apos;LAT_MX_CLV_FollowUpOff&apos; || 
 $RecordType.DeveloperName = &apos;LAT_MX_CLV_FollowUpOn&apos; || 
 $RecordType.DeveloperName = &apos;LAT_MX_CLV_ProspectingOff&apos; || 
 $RecordType.DeveloperName = &apos;LAT_MX_CLV_ProspectingOn&apos; || 
 $RecordType.DeveloperName = &apos;LAT_MX_CLV_RelationshipOff&apos; || 
 $RecordType.DeveloperName = &apos;LAT_MX_CLV_RelationshipOn&apos; || 
 $RecordType.DeveloperName = &apos;LAT_MX_CLV_SalesNegotiation&apos;)
&amp;&amp;
(
(NOT(ISPICKVAL(LAT_MX_StartTime__c,&apos;&apos;)) &amp;&amp; ISPICKVAL(LAT_MX_EndTime__c,&apos;&apos;))
||
(ISPICKVAL(LAT_MX_StartTime__c,&apos;&apos;) &amp;&amp; NOT(ISPICKVAL(LAT_MX_EndTime__c,&apos;&apos;)))
||
(
(NOT(ISPICKVAL(LAT_MX_StartTime__c,&apos;&apos;) &amp;&amp; ISPICKVAL(LAT_MX_EndTime__c,&apos;&apos;)))
&amp;&amp;
(
(TEXT(LAT_MX_StartTime__c) = TEXT(LAT_MX_EndTime__c))
||
(VALUE(LEFT(TEXT(LAT_MX_StartTime__c),2)) &gt; VALUE(LEFT(TEXT(LAT_MX_EndTime__c),2))
||
((VALUE(LEFT(TEXT(LAT_MX_StartTime__c),2)) = VALUE(LEFT(TEXT(LAT_MX_EndTime__c),2)))
&amp;&amp;
VALUE(RIGHT(TEXT(LAT_MX_StartTime__c),2)) &gt; VALUE(RIGHT(TEXT(LAT_MX_EndTime__c),2))))
)
)
)</errorConditionFormula>
        <errorDisplayField>LAT_MX_EndTime__c</errorDisplayField>
        <errorMessage>End time must be after Start time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_MX_CLV_VR02_EditValidation</fullName>
        <active>true</active>
        <description>Validates that a checklist cannot be edited if the Visit is close</description>
        <errorConditionFormula>($RecordType.DeveloperName = &apos;LAT_MX_CLV_ActivityNegotiationOff&apos; || 
$RecordType.DeveloperName = &apos;LAT_MX_CLV_ActivityNegotiationOn&apos; || 
$RecordType.DeveloperName = &apos;LAT_MX_CLV_Collections&apos; || 
$RecordType.DeveloperName = &apos;LAT_MX_CLV_FollowUpOff&apos; || 
$RecordType.DeveloperName = &apos;LAT_MX_CLV_FollowUpOn&apos; || 
$RecordType.DeveloperName = &apos;LAT_MX_CLV_ProspectingOff&apos; || 
$RecordType.DeveloperName = &apos;LAT_MX_CLV_ProspectingOn&apos; || 
$RecordType.DeveloperName = &apos;LAT_MX_CLV_RelationshipOff&apos; || 
$RecordType.DeveloperName = &apos;LAT_MX_CLV_RelationshipOn&apos; || 
$RecordType.DeveloperName = &apos;LAT_MX_CLV_SalesNegotiation&apos;) 
&amp;&amp;
ISPICKVAL(Visit_AR__r.Status__c,&apos;Encerrada&apos;)</errorConditionFormula>
        <errorMessage>Checklist cannot be modified if the visit is closed.</errorMessage>
    </validationRules>
</CustomObject>